--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.4",
     "zustand": "^4.5.2"
